# ChangeLog for dev-python/cloud_sptheme
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Apr 2012; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.2.ebuild,
  +files/cloud_sptheme-1.2-Python3_compatibility.patch:
  Patch setup.py for Python 3 compatibility.

  09 Apr 2012; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.2.ebuild:
  Support Python 3, now that Sphinx does.

  09 Apr 2012; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.2.ebuild:
  src_install default hack now in jnrowe-pypi eclass.

  08 Apr 2012; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.2.ebuild:
  Switched to python-distutils-ng eclass.

  18 Mar 2012; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.2.ebuild:
  Switched to EAPI4.

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  11 Aug 2011; James Rowe <jnrowe@gmail.com> -cloud_sptheme-1.1.ebuild,
  cloud_sptheme-1.2.ebuild:
  Keyworded x86.

  11 Aug 2011; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.2.ebuild:
  Keyworded amd64.

  24 Jul 2011; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.1.ebuild:
  Keyworded amd64.

*cloud_sptheme-1.2 (12 Jul 2011)

  12 Jul 2011; James Rowe <jnrowe@gmail.com> +cloud_sptheme-1.2.ebuild:
  Version bump [433].

  25 Jun 2011; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.1.ebuild:
  Whitespace fix.

  24 Jun 2011; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.1.ebuild:
  Keyworded ~x86.

*cloud_sptheme-1.1 (22 Jun 2011)

  22 Jun 2011; James Rowe <jnrowe@gmail.com> +cloud_sptheme-1.1.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me [400].
