@@ -10,5 +10,5 @@ RDEPEND=dev-python/sphinx python_targets_python2_5? ( dev-lang/python:2.5 ) pyth
 REQUIRED_USE=|| ( python_targets_python2_5 python_targets_python2_6 python_targets_python2_7 python_targets_python3_1 python_targets_python3_2 )
 SLOT=0
 SRC_URI=mirror://pypi/c/cloud_sptheme/cloud_sptheme-1.2.tar.gz
-_eclasses_=base	5f35078c26d6c60556d5c8a2feb4f84f	eutils	74d9118e657da5b1db0c36f5dea88e57	jnrowe-pypi	9789fd5aecac33fd48a8bcd9d1dc98e0	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python-distutils-ng	9c728fa97679b3ca2742cf8ccd260599	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
+_eclasses_=base	5f35078c26d6c60556d5c8a2feb4f84f	eutils	74d9118e657da5b1db0c36f5dea88e57	jnrowe-pypi	9789fd5aecac33fd48a8bcd9d1dc98e0	multilib	5f4ad6cf85e365e8f0c6050ddd21659e	python-distutils-ng	1168c2a6b014e0d981b0c5e620915dfa	toolchain-funcs	6526ac6fc9aedf391efb91fcd75ace68	user	32a09e82e2f592bf88ad2fd08525166e
 _md5_=b546021fd4797a8e73d0825326fc024e
