@@ -2,6 +2,10 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 May 2012; James Rowe <jnrowe@gmail.com>
+  files/cloud_sptheme-1.2-Python3_compatibility.patch:
+  Use 2to3 to update package for Python 3.
+
   10 Apr 2012; James Rowe <jnrowe@gmail.com> cloud_sptheme-1.2.ebuild,
   +files/cloud_sptheme-1.2-Python3_compatibility.patch:
   Patch setup.py for Python 3 compatibility.
